--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,101 +1,476 @@
-
-.heart {
-
-  position: relative;
-  margin: 100px auto 10px;
-  text-align : center;
-}
-
-.login-page {
-  position: relative
-  width: 360px;
-  padding: 0 0 0;
-  margin: auto;
-}
-.form {
-  position: relative;
-  z-index: 1;
-  background: #edb3ff;
-  max-width: 360px;
-  margin: 0 auto 100px;
-  padding: 10px;
-  text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-  border-radius : 12px;
-}
-.form input {
-  font-family: "Roboto", sans-serif;
-  outline: 0;
-  background: #ffccff;
-  width: 100%;
-  border: 0;
-  margin: 0 0 15px;
-  padding: 15px;
-  box-sizing: border-box;
-  font-size: 14px;
-}
-.form button {
-  text-transform: uppercase;
-  background: #ffb3b3;
-  border : 1px solid pink;
-  width: 100%;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 15px;
-  cursor: pointer;
-  border-radius : 12px;
-}
-
-.form button:hover,.form button:active,.form button:focus {
-  background: #ff00ff;
+@font-face {
+	font-family: "Gaming"; src: url('../fonts/ka1.ttf');
 }
 
 body {
-  background: #ffcccc; /* fallback for old browsers */
+	border-color: pink;
+	border-style: solid;
+	border-size: 10px;
+}	
+
+#full-screen-background-image {
+	z-index: -999;
+	min-height: 100%;
+ 	min-width: 1024px;
+ 	width: 100%;
+ 	height: auto;
+ 	position: fixed;
+ 	top: 0;
+ 	left: 0;
+ 	opacity: 0.9;
+ 
 }
 
-#successtext {
-  text-align : center;
-  font-size : 50px;
-  color : #660066;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+#title-container {
+	margin-left : 15em;
+	margin-right : 15em;
+
 }
 
-#next {
-  text-transform: uppercase;
-  background: #e660e6;
-  border : 1px solid pink;
-  width: 100%;
-  padding: 15px;
-  color: #FFFFFF;
-  font-size: 15px;
-  cursor: pointer;
-  border-radius : 12px;
-  transition: all 0.5s;
+.section-title {
+	border-bottom-style: double;
+	border-bottom-color : #78428a;
+	border-bottom-width : 4px;
+	box-sizing: : border-box;
+	color: black;
+	direction: ltr;
+	display: block;
+	font-family: "Gaming", serif;
+	font-size: 120px;
+	font-style: normal;
+	font-weight: normal;
+	text-align: center;
+	margin-bottom: 0px;
+	margin-top: 60px;
+	padding-bottom: 20px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+	color:  rgba(217,167,220,1);
+	text-rendering: optimizeLegibility;
+	transform-style: preserve-3d;
 }
 
-#next span {
-  cursor: pointer;
-  display: inline-block;
+.rotate-title {
+	display: inline-block;
+	-webkit-animation-name: spintitle; /* Chrome, Safari, Opera */
+    -webkit-animation-duration: 8s; /* Chrome, Safari, Opera */
+    animation-name: spintitle;
+    animation-iteration-count: infinite;
+}
+
+@-webkit-keyframes spintitle {
+    0%   {transform: rotateY(0deg);}
+    25%  {transform: rotateY(90deg);}
+    50%  {transform: rotateY(180deg);}
+    75% {transform: rotateY(270deg);}
+    100% {transform: rotateY(360deg);}
+}
+
+#nav-container {
+	margin-top: 10px;
+	padding-bottom: 10px;
+	margin-left : 15em;
+	margin-right : 15em;
+	border-bottom-style: double;
+	border-bottom-color : #78428a;
+	border-bottom-width : 4px;
+}
+.icon-bar {
+	display: block;
+	box-sizing: border-box;
+	direction: ltr;
+}
+
+.icon-bar span {
+	margin: 10px;
+}
+
+.dagger, .dagger2, .dagger3, .dagger4 {
+	opacity: 0.5;
+	width : 100px;
+	width : 100px;
+	vertical-align: text-bottom;
+}
+.dagger:hover, .dagger2:hover, .dagger3:hover, .dagger4:hover {
+	opacity: 1;
+}
+
+.play .tooltiptext, .highscore .tooltiptext, .introductions .tooltiptext, .login .tooltiptext {
+	visibility: hidden;
+	width: 120px;
+    color: #fff;
+    text-align: center;
+    font-size: 20px;
+    border-radius: 6px;
+    position: absolute;
+    z-index: 1;
+	background-color:  rgba(217,167,220,1);
+
+}
+
+.play:hover .tooltiptext, .highscore:hover .tooltiptext, .introductions:hover .tooltiptext, .login:hover .tooltiptext {
+	visibility: visible;
+}
+
+.intro-box, .highscore-box {
+	position: relative;
+	margin-top: 30px;
+	padding: 20px;
+	margin-left : 15em;
+	margin-right : 15em;
+	text-align: center;
+	font-family: "Gaming", serif;
+	font-size: 30px;
+	display: none;
+	border: 5px double #8383af;
+	border-radius: 40px;
+	background: linear-gradient(to right, #ff66b3, #25b7c4)
+}
+
+.login-box {
+
+
+	margin-top: 30px;
+	padding: 20px;
+	padding-bottom: 0px;
+	height: auto;
+	width: 400px;
+	text-align: center;
+	font-size: 30px;
+	border: 5px double #8383af;
+	border-radius: 40px;
+	display: none;
+	position: absolute;
+	left: 50%;
+	transform : translate(-50%);
+
+	background: linear-gradient(to right, #ff66b3, #25b7c4)
+}
+
+.sucess-login {
+	margin: 30px;
+	color: white;
+	font-size: 30px;
+	display: none;
+	font-family: "Gaming", serif;
+}
+
+.legend {
+  margin-top: 100px;
   position: relative;
-  transition: 0.5s;
+  border-radius: 20px;
+  width: 90%;
+  height: 10%;
+  display: block;
+  background: #ff66b3;
+  padding: 15px;
+  color: #fff;
+  font-size: 38px;
+  vertical-align: middle;
+  text-align: center;
+  font-family: "Gaming", serif;
 }
-
-#next span:after {
-  content: '>>>>>';
+.legend:after {
+  content: "";
   position: absolute;
-  opacity: 0;
+  background-image: url(http://simpleicon.com/wp-content/uploads/multy-user.png);
+  background-size: 100px 100px;
+  background-repeat: no-repeat;
+  background-position: 100% -16px;
+  border-radius : 20px;
+  opacity: 0.06;
   top: 0;
-  right: -20px;
-  transition: 0.5s;
-}
-
-#next:hover span {
-  padding-right: 50px;
-}
-
-#next:hover span:after {
-  opacity: 1;
+  left: 0;
+  bottom: 0;
   right: 0;
+  position: absolute;
+}
+
+.input {
+  position: relative;
+  width: 90%;
+  margin: 15px auto;
+  display: all;
+}
+.input span {
+  position: absolute;
+  display: block;
+  color: #d4d4d4;
+  left: 10px;
+  top: 8px;
+  font-size: 20px;
+}
+.input input {
+  width: 100%;
+  padding: 10px 5px 10px 40px;
+  display: block;
+  border: 1px solid #EDEDED;
+  border-radius: 4px;
+  transition: 0.2s ease-out;
+  color: #a1a1a1;
+}
+.input input:focus {
+  padding: 10px 5px 10px 10px;
+  outline: 0;
+  border-color: #FF7052;
+}
+.submit {
+  width: 45px;
+  height: 45px;
+  display: block;
+  margin: 0 auto -15px auto;
+  background: #fff;
+  border-radius: 100%;
+  border: 1px solid #ff66b3;
+  color: #ff66b3;
+  font-size: 24px;
+  cursor: pointer;
+  box-shadow: 0px 0px 0px 7px #fff;
+  transition: 0.2s ease-out;
+}
+.submit:hover,
+.submit:focus {
+  background: #ff66b3;
+  color: #fff;
+  outline: 0;
+}
+
+.intro-box p {
+	margin: 3px;
+}
+
+.play-box {
+	margin-top: 30px;
+	height: auto;
+	width: auto;
+	position: absolute;
+	left: 50%;
+	transform : translate(-50%);
+	display: none;
+
+}
+
+.container-card {
+	border: 5px double #8383af;
+	border-radius: 30px;
+	background: linear-gradient(to right, #ff66b3, #25b7c4);
+	width: 510px;
+	height: 510px;
+	padding: 5px;
+	float: left;
+
+}
+
+.card		{
+	display: inline-block;
+	margin: 1%;
+	height: 23%;
+	width: 23%;
+	cursor: initial;
+}
+
+.card .inside {
+	width: 100%;
+ 	height: 100%;
+ 	display: inline-block;
+    -webkit-transform-style: preserve-3d;
+   			transform-style: preserve-3d;
+	-webkit-transition: .4s ease-in-out;
+  			transition: .4s ease-in-out;
+  	background-image: url("../images/purple-flappy.png");
+  	background-size: cover;
+	border: 1px solid black;
+	border-radius: 30px;
+}
+.card .inside.picked, .card .inside.matched {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+.card .inside.matched {
+  -webkit-animation: 1s matchAnim ease-in-out;
+          animation: 1s matchAnim ease-in-out;
+  -webkit-animation-delay: .4s;
+          animation-delay: .4s;
+}
+.card .front, .card .back {
+   -webkit-backface-visibility: hidden;
+           backface-visibility: hidden;
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+}
+.card .front img, .card .back img {
+  max-width: 80%;
+  display: block;
+  margin: 10px auto;
+}
+
+.card .front {
+  -webkit-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+}
+
+.control-container {
+	text-align: center;
+	display: block;
+}
+
+.control-box {
+	border: 5px double #8383af;
+	border-radius: 30px;
+	background-color : #e0e0eb;
+	height: 430px;
+	width: 200px;
+	margin-left: 10px;
+	float: right;
+	display: none;
+	font-weight: underline;
+	font-family: "Gaming", serif;
+}
+
+.user-logged {
+
+	margin-top: 20px;
+	font-size: 20px;
+	padding-bottom: 20px;
+	border-bottom: 5px double black;
+}
+
+.login-first {
+	display: block;
+}
+
+#log-in-user {
+	font-size: 15px;
+	margin-top : 10px;
+	margin bottom: 30px;
+	padding-bottom: 10px;
+	border-bottom: 5px double black;
+}
+
+
+.timer {
+  text-shadow: -1px 1px 1px #E65100, 0 0 50px white; /* Параметры тени */
+  font-size: 20px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  border: 5px double black;
+  margin-bottom: 20px;
+  background: pink;
+  font-family : "Times New Roman", Georgia, Serif;
+}
+
+.control-container button {
+  font-size: 16px;
+  line-height: 40px;
+  width: 80px;
+  border: none;
+  border-radius: 8px;
+  outline: none;
+	color:  rgba(217,167,220,1);
+
+}
+
+.stopwatch {
+	margin-top: 100%;
+}
+
+
+#pause:active {
+  background: #03A9F4;
+}
+
+#start {
+  background: purple;
+}
+
+#start:active {
+  background: #43A047;
+}
+
+#reset {
+  background: black;
+}
+
+#reset:active {
+  background: #F44336;
+}
+
+#start, #reset {
+
+  font-family: "Gaming", serif;
+  display: inline;
+}
+.clock {
+	margin-left: 25px;
+	margin-top: 15px;
+}
+
+.clockContainer{
+  position: absolute;
+  margin: auto;
+  width: 150px;
+  height: 150px;
+  border: 3px solid transparent;
+}
+
+.clockOut{
+  width: 80%;
+  height: 80%;
+  border: 3px solid purple;
+  border-radius: 50%;
+  position: absolute;
+  bottom:0;
+  background: white;
+  margin-left: auto; margin-right: auto; left:0; right:0;
+}
+
+.clockTop{
+  border-top: 3px solid purple;
+   border-right: 3px solid purple;
+   border-left: 3px solid purple;
+  width: 40px;
+  top: 11px;
+  position: absolute;
+  margin-left: auto; margin-right: auto; left:0; right:0;
+  height: 18px;
+  border-radius: 3px;
+}
+
+.clockNeedle{
+  width: 50px;
+  height: 2px;
+  background: black;
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform-origin:100% 50%;
+  -webkit-transform-origin:100% 50%;
+  -webkit-animation: needleAnimation 3s linear 0s infinite; 
+  animation: needleAnimation 3s linear 0s infinite;
+  -webkit-animation-play-state : paused;
+}
+
+/* Chrome, Safari, Opera */
+@-webkit-keyframes needleAnimation {
+    from {
+    	
+    }
+    to {
+    	-webkit-transform:rotate(360deg); 
+	}
+}
+
+/* Standard syntax */
+@keyframes needleAnimation {
+   from {
+    	
+    }
+    to {
+    	-ms-transform:rotate(360deg); 
+    	-moz-transform:rotate(360deg); 
+    	-webkit-transform:rotate(360deg); 
+	}
 }
 
